--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -25,6 +25,7 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.13.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "ethers": "^6.7.1"
     }
 }
