--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -9,6 +9,9 @@
         "@inertiajs/react": "^1.0.0",
         "@prettier/plugin-php": "^0.19.6",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/react": "^18.2.22",
+        "@types/react-dom": "^18.0.8",
+        "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
@@ -25,7 +28,10 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.13.5",
+        "@types/node": "^20.6.5",
         "dotenv": "^16.3.1",
-        "ethers": "^6.7.1"
-    }
+        "ethers": "^6.7.1",
+        "typescript": "^5.2.2"
+    },
+    "type": "module"
 }
